--- a/style.css
+++ b/style.css
@@ -316,9 +316,15 @@ h2 {
   margin-top: 20px;
 }
 
+.projects li {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .projects li img {
   border-radius: 10px;
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -326,7 +332,7 @@ h2 {
   font-family: 'Teko';
   font-size: 30px;
   color: #333;
-  margin-right: 30px;
+  margin-right: 20px;
 } body.dark .projects li h3{
   color: #f5f5f5;
 }
@@ -340,13 +346,14 @@ h2 {
 .projects li div {
   display: flex;
   align-items: center;
-  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .projects li div span {
   width: fit-content;
   display: flex;
   align-items: center;
+  padding: 5px 10px;
 }
 
 .projects li div img{
@@ -355,14 +362,37 @@ h2 {
   margin-right:5px;
 }
 
-.skills article {
+.skills .marquee {
   display: flex;
-  flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
+  overflow-x: hidden;
+  width: 100%;
+  padding: 20px 0;
+  box-shadow: inset 0 0 25px 25px #f5f5f5;
+  transition: all 300ms;
+} body.dark .skills .marquee {
+  box-shadow: inset 0 0 25px 30px #222;
 }
 
-.skills article img {
+.skills .marquee .imgs-ctn {
+  display: inline-flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+  animation: marquee 20s linear infinite;
+  z-index: -1
+}
+
+@keyframes marquee {
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+}
+
+.skills .marquee img {
   width: 80px;
   border-radius: 25px;
 }
