--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header{
   background: #f5f5f577;
   backdrop-filter: blur(8px);
   position: sticky;
-  padding: 10px;
+  padding: 20px;
   top: 0;
   left: 0;
   z-index: 300;
@@ -366,9 +366,9 @@ h2 {
   display: flex;
   gap: 10px;
   margin-top: 20px;
-  overflow-x: hidden;
+  overflow-x: scroll;
   width: 100%;
-  padding: 20px 0;
+  padding: 40px 0;
   box-shadow: inset 0 0 25px 25px #f5f5f5;
   transition: all 300ms;
 } body.dark .skills .marquee {
