--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ h2 {
   display: flex;
   gap: 10px;
   margin-top: 20px;
-  overflow-x: scroll;
+  overflow-x: hidden;
   width: 100%;
   padding: 40px 0;
   box-shadow: inset 0 0 25px 25px #f5f5f5;
