--- a/style.css
+++ b/style.css
@@ -369,10 +369,10 @@ h2 {
   overflow-x: hidden;
   width: 100%;
   padding: 40px 0;
-  box-shadow: inset 0 0 25px 25px #f5f5f5;
+  box-shadow: inset 0 0 25px 35px #f5f5f5;
   transition: all 300ms;
 } body.dark .skills .marquee {
-  box-shadow: inset 0 0 25px 30px #222;
+  box-shadow: inset 0 0 25px 35px #222;
 }
 
 .skills .marquee .imgs-ctn {
@@ -380,6 +380,7 @@ h2 {
   flex-wrap: nowrap;
   gap: 10px;
   animation: marquee 20s linear infinite;
+  transition: all 300ms;
   z-index: -1
 }
 
@@ -388,7 +389,7 @@ h2 {
     transform: translateX(0);
   }
   100%{
-    transform: translateX(-100%);
+    transform: translateX(-100.70%);
   }
 }
 
