--- a/style.css
+++ b/style.css
@@ -23,12 +23,14 @@
   font-size: 14px;
   scroll-behavior: smooth;
   --primary: #569880;
+  background: linear-gradient(to top right, #f5f5f5, var(--primary), #f0f0f0, #ffffff, var(--primary)) no-repeat cover center;
   --secondary: #CF2669;
 }
 
 body{
   background: #f5f5f5;
   transition: background 300ms;
+  overflow-y: scroll;
 }
 
 body.dark {
@@ -50,10 +52,10 @@ body.dark .logo {
   color: #f5f5f5;
 }
 
-img {
+/* img {
   width: 100px;
   border-radius: 1000px;
-}
+} */
 a{
   color: #333;
   transition: all 300ms;
@@ -90,7 +92,7 @@ header div div {
 
 .logo {
   color: #333;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: 1px;
 }
 
@@ -212,6 +214,10 @@ section {
   border-radius: 0;
   height: 25px;
   cursor: pointer;
+}
+
+.hero .profile{
+  border-radius: 100%;
 }
 
 .hero .name h1 {
@@ -368,6 +374,7 @@ h2 {
   margin-top: 20px;
   overflow-x: hidden;
   width: 100%;
+  border-radius: 20px;
   padding: 40px 0;
   box-shadow: inset 0 0 25px 35px #f5f5f5;
   transition: all 300ms;
@@ -378,8 +385,8 @@ h2 {
 .skills .marquee .imgs-ctn {
   display: inline-flex;
   flex-wrap: nowrap;
-  gap: 10px;
-  animation: marquee 20s linear infinite;
+  gap: 25px;
+  animation: marquee 30s linear infinite;
   transition: all 300ms;
   z-index: -1
 }
@@ -389,13 +396,25 @@ h2 {
     transform: translateX(0);
   }
   100%{
-    transform: translateX(-100.70%);
+    transform: translateX(-100.57%);
+  }
+}
+
+.rotate{
+  animation: rotate 5s infinite linear;
+}
+
+@keyframes rotate {
+  0%{
+    transform: rotate(0);
+  }
+  100%{
+    transform: rotate(360deg);
   }
 }
 
 .skills .marquee img {
-  width: 80px;
-  border-radius: 25px;
+  border-radius: 0;
 }
 
 .about article{
