--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@
   font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   scroll-behavior: smooth;
-  --primary: #569880;
-  --secondary: #CF2669;
+  --primary: #2994b8;
+  --secondary: #746400;
 }
 
 body{
@@ -35,8 +35,8 @@ body{
 body.dark {
   background: #222;
   color: #f5f5f5;
-  --primary: #7acdae;
-  --secondary: #ed669c
+  --primary: #00b7ff;
+  --secondary: #f2dd22;
 }
 
 body.dark  a {
@@ -290,7 +290,7 @@ h2 {
   background: var(--primary);
   transform: translateX(-5px);
   border-radius: 100%;
-  box-shadow: 0 0 10px rgb(117, 247, 162);
+  box-shadow: 0 0 10px rgb(117, 208, 247);
 }
 
 .experience .xp-list .xp-item time{
@@ -371,7 +371,7 @@ h2 {
   display: flex;
   gap: 25px;
   margin-top: 20px;
-  overflow-x: scroll;
+  overflow-x: hidden;
   width: 100%;
   border-radius: 20px;
   padding: 40px 0;
@@ -379,6 +379,7 @@ h2 {
   transition: all 300ms;
 } body.dark .skills .marquee {
   box-shadow: inset 0 0 25px 35px #222;
+  cursor: pointer;
 }
 
 .skills .marquee .imgs-ctn {
@@ -390,12 +391,39 @@ h2 {
   z-index: -1
 }
 
+.skills .marquee .imgs-ctn.grid {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  animation: none;
+  gap: 25px;
+  transition: all 300ms;
+  padding: 20px;
+  z-index: -1;
+  margin: auto;
+  animation: apear 300ms ease;
+}
+.skills .marquee .imgs-ctn.grid img{
+  width: 100%;
+}
+.skills .marquee .imgs-ctn.hidde {
+  display: none;
+}
+
 @keyframes marquee {
   0%{
     transform: translateX(0);
   }
   100%{
     transform: translateX(-100%);
+  }
+}
+
+@keyframes apear {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
   }
 }
 
@@ -500,13 +528,13 @@ footer .links nav a:hover {
 }
 
 .tag {
-  background: #764444;
+  background: #44764e;
   padding: 2px 10px 2px 10px;
   border-radius: 20px;
-  border: 1px solid #ffb1b1;
+  border: 1px solid #bdffb1;
   font-size: 12px;
   font-family: 'Poppins';
-  color: #ffb1b1;
+  color: #bdffb1;
   font-weight: 300;
 }
 
@@ -525,6 +553,10 @@ footer .links nav a:hover {
 
   main {
     padding: 0 20px;
+  }
+
+  .skills .marquee .imgs-ctn.grid {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   footer {
@@ -631,6 +663,10 @@ footer .links nav a:hover {
   
   .skills article img {
     width: 50px;
+  }
+
+  .skills .marquee .imgs-ctn.grid {
+    gap: 5px;
   }
 
   footer .info p {
