--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,17 +51,17 @@ const { seo } = portfolioData;
   }
 
   ::selection {
-    background-color: #ffffff;
+    background-color: #fb923c;
     color: #000000;
   }
 
   ::-webkit-selection {
-    background-color: #ffffff;
+    background-color: #fb923c;
     color: #000000;
   }
 
   ::-moz-selection {
-    background-color: #ffffff;
+    background-color: #fb923c;
     color: #000000;
   }
 
